@@ -1,5 +1,10 @@
 2018-03-22 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/mcs51/ralloc.c:
+	  Allocate some local _Bool to bit registers.
+
+2018-03-22 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/mcs51/gen.c:
 	  Fix handling of acc for multiplicative operators.
 	* src/mcs51/ralloc.c:
